<resources>
    <string name="app_name">MyDietary</string>
    <string name="food_name">Food Name</string>
    <string name="food_group">Food Group</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="meal">Meal</string>
    <string name="note">Notes</string>
    <string name="note_hint">Anything you want to write here....</string>
    <string name="user_name">Name of Reporter</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="camera">Camera</string>
    <string name="action_search">Search...</string>
    <string name="version">v1.2.0</string>
    <string name="settings">Settings</string>
    <string name="splash_setting">Disable splash screen on startup</string>
</resources>
